--- a/main.html
+++ b/main.html
@@ -10,6 +10,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<img src="/home/rguktongole/Downloads/ammu.jpg"alt="not found">
+	<h1>Meghana</h1>
+	<a href="meghanasubramnaym"></a>
+	<section id="skills">
+		python
+	</section>
+	<section id="projects">
+		<ul>
+			<li>food delivery</li>
+			<li>weather</li>
+		</ul>
+	</section>
 
 </body>
 
