--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 	<img src="/home/rguktongole/Downloads/ammu.jpg"alt="not found">
 	<h1>Meghana</h1>
-	<a href="meghanasubramnaym"></a>
+	<a href="meghanasubramnaymlinkedin.com"></a>
 	<section id="skills">
 		python
 	</section>
