--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html>
 
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <!-- <script type="text/javascript" src="./script.js">
 </script>
 	<img src="/home/rguktongole/Downloads/ammu.jpg"alt="not found">
 	<h1>Meghana</h1>
@@ -25,4 +25,59 @@
 
 </body>
 
+</html> --> 
+Following is the exact problem statement:
+<!DOCTYPE html>
+<html lang=“en”>
+<head>
+<meta charset=“UTF-8”>
+<meta http-equiv=“X-UA-Compatible” content=“IE=edge”>
+<meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+<title>Portfolio Page</title>
+<style>
+table {
+border-collapse: collapse;
+width: 100%;
+}
+th, td {
+border: 1px solid black;
+padding: 8px;
+text-align: left;
+}
+th {
+background-color: #f2f2f2;
+}
+</style>
+</head>
+<body>
+<h1>Create Your Portfolio Page</h1>
+<p>A lot of developers use their portfolio websites to display their skills and resume. In this task, you will create a simple portfolio page with the following requirements:</p>
+<table>
+<tr>
+<th>Requirement</th>
+<th>Description</th>
+</tr>
+<tr>
+<td>Image</td>
+<td>Insert your image using the <code>img</code> tag.</td>
+</tr>
+<tr>
+<td>Name</td>
+<td>Write your name using a heading element (e.g., <code>h1</code> tag).</td>
+</tr>
+<tr>
+<td>LinkedIn Profile</td>
+<td>Provide a link to your LinkedIn profile using the <code>a</code> (anchor) tag. The label of the link should contain at least one character.</td>
+</tr>
+<tr>
+<td>Skills Section</td>
+<td>Create a section with the id <code>skills</code> to list your skills. This section must contain text.</td>
+</tr>
+<tr>
+<td>Projects Section</td>
+<td>Create a section with the id <code>projects</code> and list your projects in an unordered list. Each project must be listed in a <code>li</code> tag and contain text.</td>
+</tr>
+</table>
+<p><strong>Note:</strong> Styling with CSS is optional for this task, but you may choose to add styling to enhance the appearance of the page.</p>
+</body>
 </html>
