--- a/main.html
+++ b/main.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Portfolio</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-	<img src="/home/rguktongole/Downloads/ammu.jpg"alt="not found">
+	<!-- Image section -->
+	<img src="/home/rguktongole/Downloads/ammu.jpg" alt="Meghana's image" width="200">
+
+	<!-- Name section -->
 	<h1>Meghana</h1>
-	<a href="meghanasubramnaymlinkedin.com"></a>
+
+	<!-- LinkedIn Profile -->
+	<a href="https://www.linkedin.com/in/meghanasubramnaym" target="_blank">LinkedIn Profile</a>
+
+	<!-- Skills Section -->
 	<section id="skills">
-		python
+		<h2>Skills</h2>
+		<p>Python, JavaScript, HTML, CSS</p>
 	</section>
+
+	<!-- Projects Section -->
 	<section id="projects">
+		<h2>Projects</h2>
 		<ul>
-			<li>food delivery</li>
-			<li>weather</li>
+			<li>Food Delivery App</li>
+			<li>Weather App</li>
 		</ul>
 	</section>
 
+	<script type="text/javascript" src="./script.js"></script>
 </body>
 
-</html> 
+</html>
+
